--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ body {
   transform: translateX(-50%);
   border-radius: 50%;
   border: 3px solid white;
-  width: 150px;
-  height: 150px;
+  width: 160px;
+  height: 160px;
   z-index: 2;
 }
 .top-banner {
@@ -160,8 +160,8 @@ img {
   </head>
   <body>
     <div class="banner-wrapper">
-      <img src="background.png" alt="Top Banner" class="top-banner">
-      <img src="jeffpic.JPG" alt="Profile" class="profile-pic">
+      <img src="figback.jpg" alt="Top Banner" class="top-banner">
+      <img src="angel2.png" alt="Profile" class="profile-pic">
     </div>
     <div style="margin-top: 70px;"></div>
 
@@ -169,44 +169,30 @@ img {
     <div class="container">
       <!-- Image and name container. Change to your pictue here. -->
       <div style="text-align: center; margin-top: 20px;">
-        <p class="allura-regular" style="margin: 0;">Jeff Carrillo</p>
-        <p class="title-role" style="margin: -20px; margin-bottom: 50px;">Owner and CEO</p>
+        <p class="allura-regular" style="margin: 0;">Angel Figueroa</p>
+        <p class="title-role" style="margin: -20px; margin-bottom: 10px;">Real Estate Agent & Property Manager</p>
       </div>
       </div>
 
       <!-- Links section 1. Replace the # inside of the "" with your links. -->
       <div class="links-container">
-        <a href="https://jczounds.com/" target="_blank">
+        <a href="https://angelfigueroa.samsonproperties.net/" target="_blank">
           <!-- <img src="background.png" class="link-icon" alt="Website icon"> -->
           Website
         </a>
-        <a href="mailto:Jczounds@gmail.com" target="_blank">
+        <a href="mailto:angel@figshomes.com" target="_blank">
           <!-- <img src="gm.png" class="link-icon" alt="Gmail icon"> -->
           Contact Me
         </a>
-        <a href="https://www.instagram.com/jczounds/" target="_blank">
+        <a href="https://www.instagram.com/figs_on_the_move/?hl=en" target="_blank">
           <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="link-icon" alt="Instagram icon"> -->
           Instagram
         </a>
-
-
-
-        <a href="https://soundcloud.com/JeffCarrDmv" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">
-          <!-- <img src="soundcloud.png" class="link-icon"> -->
-          SoundCloud
-        </a>
-
-        <a href="https://www.facebook.com/JcZounds/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">
+        <a href="https://www.facebook.com/FIGHomesInvestments/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">
           <!-- <img src="facebook.png" class="link-icon"> -->
           Facebook
         </a>
-
-        <a href="https://www.threads.com/@jczounds" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">
-          <!-- <img src="thread.png" class="link-icon"> -->
-          Threads
-        </a>
-
-        <a href="https://g.page/r/CXDVcW8A4d5dEAI/review" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">
+        <a href="https://g.page/r/CbEp15ALerufEAE/review" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">
           <!-- <img src="googoo.png" class="link-icon"> -->
           Google Reviews
         </a>
